--- a/app/views/posts/dashboard.html.erb
+++ b/app/views/posts/dashboard.html.erb
@@ -20,7 +20,7 @@
             <td><%= post.title%></td>
             <td><%= post.created_at%></td>
             <td><%= post.updated_at%></td>
-            <td><img src=<%= post.image_url%>></td>
+            <td><%= post.image_url%></td>
             <td><%= post.content%></td>
         </tr>
     <% end %>
