--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,17 +7,19 @@
   <h2> Contenido </h2>
   <textarea name="content"></textarea>
   <input type="submit" value="Enviar">
-  <% if @post.errors.any? %>
-    <div id ="error_explanation">
-        <h2>
-            <%= pluralize(@post.errors.count, "errores") %>
-            no permiten que se cree tu post:
-        </h2>
-        <ul>
-            <% @post.errors.full_messages.each do |msg|%>
-            <li><%= msg %></li>
-            <% end %>
-        </ul>
+  <div class="container mt-5">
+    <% if @post.errors.any? %>
+      <div id ="error_explanation" >
+          <h4>
+              <%= pluralize(@post.errors.count, "errores") %>
+              no permiten que se cree tu post:
+          </h4>
+          <ul>
+              <% @post.errors.full_messages.each do |msg|%>
+              <li><%= msg %></li>
+              <% end %>
+          </ul>
+    </div>  
+    <% end %>
   </div>
-<% end %>
 </form>
